project(node_test)

cmake_minimum_required(VERSION 3.0)

# Locate GTest
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
 
# Link runTests with what we want to test and the GTest and pthread library
add_executable(runTests test_node.cpp)
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
